# learn-rust

./: .gitignore
actix-gcd/: Cargo.toml
actix-gcd/src/: lib.rs  main.rs  math.rs  responses.rs
adder/src/: lib.rs
advanced_traits/src/: main.rs
app/: hello2.txt
app/src/: main.rs
async-chat/: Cargo.toml  Makefile
async-chat/src/: lib.rs  utils.rs
async_http_client/: Cargo.toml
async_http_client/src/: main.rs
blog/src/: lib.rs  main.rs
cl_arguments/: Cargo.toml
cl_arguments/src/: main.rs
git-toy/: Makefile  build.rs
git-toy/src/: git.rs  main.rs
git-toy/src/git/: commit.rs  error.rs  oid.rs  raw.rs  repository.rs
git-toy/src/git/commit/: signature.rs
hello_macro_derive/src/: lib.rs
hellow/: 404.html  Makefile
hellow/src/: lib.rs  main.rs
iterators_and_closures/src/: main.rs
json_macro/src/: lib.rs  main.rs
macros/src/: lib.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
patterns/src/: main.rs
pretty_sqrt/: Cargo.toml
pretty_sqrt/src/: main.rs
quickreplace/: Cargo.toml  test-modified.txt
quickreplace/src/: main.rs
restaurant/src/: back_of_house.rs  customer.rs  lib.rs
restaurant/src/front_of_house/: hosting.rs  serving.rs
src/: main.rs
string_mastering/: Cargo.toml
string_mastering/src/: main.rs
unsafe_rust/src/: main.rs
