[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["sync"] }
